src/main/scala/ScalaForTheJavaEyes/output/RunSerialAssignments.output
(fragment of SerialAssignments.scala):3: error: type mismatch;
 found   : Unit
 required: Int
a = b = c
       ^
one error found
!!!
discarding <script preamble>
